--- a/MysteriousStranger.csproj
+++ b/MysteriousStranger.csproj
@@ -204,6 +204,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cell.cs" />
+    <Compile Include="CellType.cs" />
     <Compile Include="ConfigLoader.cs" />
     <Compile Include="Bot\DiscordBot.cs" />
     <Compile Include="Bot\DiscordBotSettings.cs" />
